[package]
name = "serde_json_pretty_error"
version = "0.1.0"
edition = "2021"

[features]
default = ["std", "colors"]
std = ["serde_json/std"]
alloc = ["serde_json/alloc"]
colors = ["dep:owo-colors"]

[dependencies]
owo-colors = { version = "3.5", optional = true }
serde = { version = "1", default-features = false }
serde_json = { version = "1", default-features = false }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
